# Automated-Traffic-Coordinator

./: README.md  mockDesign.md  process_airport_data.py  story.md
AirportData/EGSS/: UK_2026_01.7z  UK_2026_01.ese  UK_2026_01.rwy
backend/: Cargo.toml
backend/src/: adsblol.rs  config.rs  main.rs  models.rs  opensky.rs
backend/src/data/: wake_turbulence.csv
backend/src/logic/: airport.rs  geofence.rs  mod.rs  phases.rs  separation.rs  sequencing.rs
frontend/: package-lock.json
frontend/src/: App.tsx  airport_data.json  index.css  taxiways.json  types.ts
frontend/src/components/: AirspaceLayer.tsx  CommandFeed.tsx  GanttTimeline.tsx  Map.tsx  SelectionPanel.tsx  Timeline.tsx
